# backend

./: .gitignore  0.16  ENHANCED_FORECAST_SERVICES_SUMMARY.md  backend_structure.txt  date_range_fix_summary.py  deploy.sh  deploy_fixes.py  fred_latest_data.json  main.py  ml_models - Shortcut.lnk  pyproject.toml  readme.md  requirements.txt  test.py  test_3m_investigation.py  test_enhanced_predictions.py  test_final_scheduler_validation.py  test_fred_integration.py  update.sh
api/: forecast.py
api/v1/: economic.py  economic_charts.py  explainability.py  forecast.py  generate_report.py  macro_indicators.py  pipeline.py  scheduler.py  simulate.py  user_reports.py  yearly_risk.py
api/v1/sentiment_component/: __init__.py  langchain_helper.py  sentiment_component.py  sentiment_routes.py
config/: __init__.py  scheduler_config.py
data/: historical_data_1m.csv  historical_data_3m.csv  historical_data_6m.csv
middleware/: priority_middleware.py
ml_models/: model_1m.h5  model_3m.h5  model_6m.h5
ml_models/1m/: history_sample.csv  lstm_transformer_model_1m.keras  lstm_transformer_scaler_1m.pkl  model_1m.keras  scaler_1m.pkl
ml_models/3m/: lstm_transformer_model_3m.keras  lstm_transformer_scaler_3m.pkl  model_3_months.keras  scaler_3.pkl
ml_models/6m/: lstm_transformer_model_6m.keras  model_6_months.keras  scaler_6.pkl
schemas/: forecast_schema.py  forecast_schema_1m.py  forecast_schema_3m.py  forecast_schema_6m.py  macro_indicators_schema.py  simulate_schema.py  yearly_risk_schema.py
services/: data_pipeline_service.py  database_service.py  economic_charts_service.py  explainability_service_1m.py  explainability_service_3m.py  explainability_service_6m.py  forecast_orchestrator.py  forecast_service.py  forecast_service_1m.py  forecast_service_3m.py  forecast_service_6m.py  fred_data_scheduler.py  fred_data_service_1m.py  fred_data_service_3m.py  fred_data_service_6m.py  macro_indicators_service.py  model_training_service.py  pdf_utils.py  scheduler_service.py  shared_fred_date_service.py  simulate_service.py  tempCodeRunnerFile.py  yearly_risk_service.py
test_scripts/: conftest.py  diagnose_fred_connection.py  fred_api_test.py  test_enhanced_scheduler.py  test_manual_trigger.py  test_priority_system.py  test_report.py  test_scheduler.py
tests/: conftest.py  run_comprehensive_tests.py  run_tests.py  test_utils.py
tests/configuration_testing/: test_frontend_configuration.py  test_system_configuration.py
tests/failover_recovery/: test_database_failover.py  test_network_failover.py  test_server_failover.py
utils/: explainability_cache.py  feature_preparation.py  fetch_latest_data.py  fred_data_cache.py  prediction_cache.py  request_priority.py  supabase_client.py
