[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.1",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "astunparse==1.6.3",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.10",
    "fastapi-cloud-cli==0.1.5",
    "flatbuffers==25.2.10",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib>=1.5.2",
    "keras==3.11.3",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "libclang==18.1.1",
    "markdown==3.8.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.3",
    "namex==0.1.0",
    "numpy==2.3.2",
    "opt-einsum==3.4.0",
    "optree==0.17.0",
    "orjson==3.11.3",
    "packaging==25.0",
    "pandas>=2.3.2",
    "pillow==11.3.0",
    "praw>=7.8.1",
    "protobuf==6.32.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "rich-toolkit==0.15.0",
    "rignore==0.6.4",
    "scikit-learn>=1.7.1",
    "sentry-sdk==2.35.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.43",
    "starlette==0.47.3",
    "statsmodels>=0.14.5",
    "supabase>=2.18.1",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.1.0",
    "textblob>=0.19.0",
    "typer==0.17.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.3",
]
